force-app/main/default/objects/Unit_de_facturation__c/Unit_de_facturation__c.object-meta.xml
<CustomObject>
    <label>Unité de facturation</label>
    <nameField>
        <displayFormat>U-{0000}</displayFormat>
        <label>Nom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unités de facturation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>