force-app/main/default/objects/Unit_de_facturation__c/fields/Business_case__c.field-meta.xml
<CustomField>
    <fullName>Business_case__c</fullName>
    <label>Business case</label>
    <referenceTo>Business_case__c</referenceTo>
    <relationshipLabel>Unités de facturation</relationshipLabel>
    <relationshipName>Unit_s_de_facturation</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>