force-app/main/default/objects/Unit_de_facturation__c/fields/Produit__c.field-meta.xml
<CustomField>
    <fullName>Produit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produit</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Unités de facturation</relationshipLabel>
    <relationshipName>Unit_s_de_facturation</relationshipName>
    <type>Lookup</type>
</CustomField>