force-app/main/default/objects/Unit_de_facturation__c/fields/Ref__c.field-meta.xml
<CustomField>
    <fullName>Ref__c</fullName>
    <formula>Produit__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ref</label>
    <type>Text</type>
</CustomField>